<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/textWrite"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_text">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_file"
            android:onClick="onclick">
        </Button>
        <Button
            android:id="@+id/btnRead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_file"
            android:onClick="onclick">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnWriteSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_file_sd"
            android:onClick="onclick">
        </Button>
        <Button
            android:id="@+id/btnReadSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_file_sd"
            android:onClick="onclick">
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_text">
    </TextView>
</LinearLayout>